fix modal nowrap

--- a/app/styles/grid.sass
+++ b/app/styles/grid.sass
@@ -1,10 +1,13 @@
+.vertical-center-modal
+	white-space: inherit !important
+
 .ant-modal-body
 	font-size: 20px !important
 	.modalContainer
 
 		display: flex
 		flex-direction: column
-		height: 80% !important
+		
 		align-items: center
 		justify-content: space-around
 		border-bottom: 1px solid rgb(180,187,200)
@@ -42,16 +45,19 @@
 			margin-bottom: 10px
 
 	.Hobbies
+		overflow: hidden
 		text-align: center
 		margin-top: 10px
 		border-bottom: 1px solid rgb(180,187,200)
 
 	.Education
+		word-wrap: break-word
 		margin-top: 10px
 		text-align: center
 		border-bottom: 1px solid rgb(180,187,200)
 
 	.JobDescription
+		word-wrap: break-word
 		margin-top: 10px
 		margin-bottom: 10px
 		text-align: center
